--- a/src/commonComponents/CommonDashboard.module.css
+++ b/src/commonComponents/CommonDashboard.module.css
@@ -9,19 +9,19 @@
 }
 
 .rightPart {
-  width: 1135px;
   margin-left: 280px;
-  margin-right: 25px;
+  margin-right: 15px;
   display: flex;
   flex-direction: column;
   gap: 20px;
-  overflow-x: auto;
+  overflow-x: hidden;
   overflow-y: auto;
   scrollbar-width: thin;
   scrollbar-color: rgba(0, 0, 0, 0.3) rgba(0, 0, 0, 0.1);
 }
 
 .locationFilterPara {
+  width: fit-content;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -55,6 +55,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px; /**/
+
 }
 
 .cardsContainer {
